[workspace]
# This should only list projects that are not
# in the dependency tree in any other way
members = [
    "types",
    "config",
    "crypto",
    "tools/genconfig",
    "consensus",
    "net",
    "discovery",
    "util",
    # "comm", (WIP: Do not enable unless testing)
    # RBC module
    "consensus/rbc",
    "consensus/appxcon",
    "examples/rbc_ex",
    "node",
    "consensus/ct_rbc",
    "consensus/hash_cc",
    "consensus/hash_cc_baa",
    "consensus/dag_rider"
]
