[workspace]
# This should only list projects that are not
# in the dependency tree in any other way
members = [
    "types",
    "config",
    "crypto",
    "crypto_blstrs",
    "tools/genconfig",
    "consensus",
    "node",
    "consensus/beacon",
    "consensus/hashrand",
    "consensus/glow_dvrf",
    "consensus/glow_lib",
    "consensus/dag_rider"
]
